# robot_emotion_recognition

./: README.md
devel/: .catkin
devel/lib/kobuki_keyop/: keyop
devel/lib/pkgconfig/: autonomous_scripts.pc  kobuki_auto_docking.pc  kobuki_bumper2pc.pc  kobuki_capabilities.pc  kobuki_controller_tutorial.pc  kobuki_description.pc  kobuki_keyop.pc  kobuki_node.pc  kobuki_random_walker.pc  kobuki_rapps.pc  kobuki_safety_controller.pc  kobuki_testsuite.pc  laptop_battery_monitor.pc  turtlebot_actions.pc  turtlebot_bringup.pc  turtlebot_calibration.pc  turtlebot_capabilities.pc  turtlebot_dashboard.pc  turtlebot_description.pc  turtlebot_follower.pc  turtlebot_gazebo.pc  turtlebot_interactive_markers.pc  turtlebot_msgs.pc  turtlebot_navigation.pc  turtlebot_rapps.pc  turtlebot_rviz_launchers.pc  turtlebot_stage.pc  turtlebot_stdr.pc  turtlebot_teleop.pc  yocs_cmd_vel_mux.pc  yocs_controllers.pc  yocs_velocity_smoother.pc
devel/lib/turtlebot_actions/: find_fiducial_pose  turtlebot_move_action_server
devel/lib/turtlebot_interactive_markers/: turtlebot_marker_server
devel/lib/turtlebot_navigation/: laser_footprint_filter
src/autonomous_scripts/: CMakeLists.txt  package.xml
src/autonomous_scripts/scripts/emotion_scripts/emotion_recognition/: .gitignore  README.md  autonomous_movement.py  emotion_stage.py  timed_camera_recogntion.py
src/autonomous_scripts/scripts/emotion_scripts/test_emotion_scripts/: angry_script.py  happy_script.py  sad_script.py  surprise_script.py
src/autonomous_scripts/scripts/stage_tutorial/: turtlebot_sensor_test.py  turtlebot_stage_sim.py
(+41 files in other folders)
