<?xml version="1.0"?>
<package format="2">
  <name>autonomous_scripts</name>
  <version>0.0.0</version>
  <description>The autonomous_scripts package</description>
  <author email="jane.doe@example.com">Jane Doe</author>
  <maintainer email="ericguan04@todo.todo">ericguan04</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>

  </export>
</package>
